--- a/FrontEnd/styles/blog.scss
+++ b/FrontEnd/styles/blog.scss
@@ -99,7 +99,7 @@ body.blog {
 
     .blog-post {
         picture.shadow img {
-            box-shadow: 0 3px 8px 2px rgba(100, 100, 100, 20%);
+            box-shadow: 0 3px 8px 2px rgb(100 100 100 / 20%);
         }
 
         img {
