--- a/FrontEnd/styles/markdown.scss
+++ b/FrontEnd/styles/markdown.scss
@@ -18,7 +18,7 @@
 
 .markdown main {
     picture.shadow img {
-        box-shadow: 0 3px 8px 2px rgba(100, 100, 100, 20%);
+        box-shadow: 0 3px 8px 2px rgb(100 100 100 / 20%);
     }
 
     img {
