Matrix re-design to cope with new platforms.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -96,6 +96,8 @@
     --breadcrumb: var(--light-grey);
     --breadcrumb-header: var(--grey);
 
+    --separator-text: var(--light-grey);
+
     --announcement-background: var(--very-light-grey);
 
     --bordered-button-background: var(--very-very-light-grey);
@@ -249,6 +251,8 @@
         --header-gradient-end: rgb(255 255 255 / 3%);
 
         --breadcrumb: var(--dark-grey);
+
+        --separator-text: var(--dark-grey);
 
         --announcement-background: var(--very-dark-grey);
 
