Build results page restoration.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -22,6 +22,7 @@ $mobile-breakpoint: 740px;
 @import 'styles/breadcrumbs';
 @import 'styles/build_logs';
 @import 'styles/build_monitor';
+@import 'styles/build_results';
 @import 'styles/copyable_input';
 @import 'styles/error';
 @import 'styles/github_highlighting';
