Removed the (Pending) text from the package page matrix.
People can click into *anywhere* on that area and immediately see that builds are pending. I think this is overkill.

--- a/FrontEnd/styles/matrix.scss
+++ b/FrontEnd/styles/matrix.scss
@@ -68,7 +68,7 @@
 
             .result {
                 display: flex;
-                flex-direction: column;
+                gap: 0.5ch;
                 align-items: center;
                 justify-content: center;
                 min-height: 30px;
