Fixed layout issue with the tag spans.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -393,7 +393,7 @@ span.beta,
 span.branch {
     padding-right: 18px;
     font-weight: 600;
-    background-position: top 2px right;
+    background-position: center right;
     background-repeat: no-repeat;
     background-size: 14px;
 }
